# PEP 621 metadata (modern standard). Poetry 2.x reads this directly; the small
# [tool.poetry] block below only carries build-time bits that have no PEP 621 field.
[project]
name = "ranbval-sdk"
version = "3.6.0"
description = "Secrets that refuse to be stolen: API keys sealed with AES-256-GCM that decrypt only on your allowlisted repo, raise a security error if anything tries to print or read them, and alert you on every access attempt."
authors = [
    { name = "Ahsan Tariq" },
    { name = "Hussnain Tariq" },
    { name = "Sundas Tariq" },
    { name = "Laiba Saleem" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = [
    "secrets", "secret-manager", "secrets-management", "api-keys", "credentials",
    "vault", "encryption", "aes-256-gcm", "security", "devsecops",
    "dotenv", "env", "environment-variables", "configuration",
    "openai", "api-key-management", "leak-detection",
]
dependencies = [
    "cryptography>=42.0.0",
    "certifi>=2024.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.scripts]
ranbval = "ranbval_sdk.cli:main"

[project.urls]
Homepage = "https://secret.ranbval.com"
Documentation = "https://github.com/TariqDreamsTech/ranbval-sdk#readme"
Repository = "https://github.com/TariqDreamsTech/ranbval-sdk"
Changelog = "https://github.com/TariqDreamsTech/ranbval-sdk/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/TariqDreamsTech/ranbval-sdk/issues"
Company = "https://ranbval.com"

[tool.poetry]
# src layout: tell the builder where the package lives, and ship the PEP 561 marker.
packages = [{ include = "ranbval_sdk", from = "src" }]
include = ["src/ranbval_sdk/py.typed"]

# Pure-Python package: no C compiler, no Cython. Ships one universal wheel + sdist
# that installs on any platform/interpreter (>=3.10). Obfuscation is not a security
# control — enforcement lives in the Ranbval control plane, not in a compiled .so.
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear — enforce modern, consistent style.
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by the formatter

[tool.mypy]
python_version = "3.10"
packages = ["ranbval_sdk"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
